A11y: History: Add application wrapper to history list.

This will allow NVDA and JAWS to enter app mode automatically.

Bug: 867081
Change-Id: Ib7bc6a417d452a7e63f8a9b644713a5570d37a69
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1855179
Reviewed-by: Dan Beam <dbeam@chromium.org>
Reviewed-by: Cait Phillips <caitkp@chromium.org>
Commit-Queue: Hector Carmona <hcarmona@chromium.org>
Cr-Commit-Position: refs/heads/master@{#706613}

Former-commit-id: bc94b3df2822829ef67172a3db421b759a68f228