chrome/browser/resources/history/history_list.js
@@ -5,6 +5,8 @@
 Polymer({
   is: 'history-list',
 
+  behaviors: [I18nBehavior],
+
   properties: {
     // The search term for the current query. Set when the query returns.
     searchedTerm: {
@@ -60,6 +62,10 @@ Polymer({
     actionMenuModel_: Object,
   },
 
+  hostAttributes: {
+    role: 'application',
+  },
+
   listeners: {
     'history-checkbox-select': 'onItemSelected_',
     'open-menu': 'onOpenMenu_',
@@ -74,6 +80,7 @@ Polymer({
     /** @type {IronListElement} */ (this.$['infinite-list']).notifyResize();
     this.$['infinite-list'].scrollTarget = this;
     this.$['scroll-threshold'].scrollTarget = this;
+    this.setAttribute('aria-roledescription', this.i18n('ariaRoleDescription'));
   },
 
   /////////////////////////////////////////////////////////////////////////////
